# Netscout

./: .gitignore  BUILD.md  CAMILLE.spec  README.md  READMEFR.md  SECURITY_FIXES.md  build_windows.bat  pyproject.toml  requirements.txt  setup.py
.build-venv/: pyvenv.cfg
.build-venv/Scripts/: activate  activate.bat  bottle.py
camille/: __init__.py  cli.py  desktop.py
camille/core/: models.py  utils.py
camille/modules/: dns_enum.py  http_analyzer.py  port_scanner.py  ssl_analyzer.py
camille/tests/: test_http_analyzer.py  test_models.py  test_port_scanner.py  test_report.py  test_security.py  test_ssl_analyzer.py  test_utils.py
camille/web/: server.py
camille/web/static/: index.html
netscout/: __init__.py  cli.py
netscout/core/: utils.py
netscout/modules/: dns_enum.py  http_analyzer.py  port_scanner.py  ssl_analyzer.py
netscout/tests/: test_http_analyzer.py  test_models.py  test_port_scanner.py  test_report.py  test_security.py  test_ssl_analyzer.py  test_utils.py
