[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "netscout"
version = "1.0.0"
description = "Network Security Reconnaissance & Analysis Tool"
requires-python = ">=3.9"
dependencies = [
    "colorama>=0.4.6",
    "rich>=13.7.0",
    "python-whois>=0.8.0",
    "dnspython>=2.4.2",
    "requests>=2.31.0",
    "cryptography>=41.0.0",
    "jinja2>=3.1.2",
    "click>=8.1.7",
]

[project.scripts]
netscout = "netscout.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["netscout*"]

[tool.pytest.ini_options]
testpaths = ["netscout/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
